Fix CORS configuration in 'WebSecurityConfig'